2000-05-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c:
	    Yet Another small surprise at Linux systems about
	    self-address extraction.  :-/

2000-04-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c, smtpserver/smtpserver.c:
	    Fix "from_box" setting to match current treatment
	    of user input string (e.g. not stomping things
	    with '\0' chars..)
	    Synced  MaxErrorRecipients  default value with
	    documentation.

	* smtpserver/cfgread.c:
	    Documentation (proto/smtpserver.conf.in) says that
	    PARAM name is:  RcptLimitCount,  while it was recognized
	    only as  RcptLimitCnt ...  Oops.

2000-04-18  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/db.c:
	    A mistake in cache LRU chain handling caused eternal
	    loop to form sometimes.  Oops.

2000-04-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/ctlopen.c:
	    An odd corner case of error handling allowed access to
	    uninitialized elements of an array -> junk data blew up..

	* scheduler/threads.c, scheduler/update.c:
	    Trying to understand why 'deferred' diagnostics causes
	    practically immediate reissuance of a task..
	    Understanding dawns, thread rescheduling was implemented
	    in fumes, so crazy it was (but then, I don't drink nor
	    smoke...)

	* router/functions.c:
	    Router function "$(dequote ...)" was previously castrated
	    a bit too much.  This isn't like sendmail-8's dequote class,
	    but far more brutal beast..

	* proto/Makefile.in:
	    Fix db subdir installation to work on a system without
	    GNU/BSD install (using locally supplied script).

	* compat/rmail/Makefile.in:
	    Allow  "mkdir -p ..." to fail on Solaris. (Anywhere actually)

	* libc/whathost.c:
	    Improved error handling by adding posixy redo of things
	    in case stat()s yield an error.. (Solaris 2.6 is complaining
	    somewhat in these routines..)

	* transports/smtp/smtptls.c:
	    Moved things around so that it works also when compiled